run pages through html-tidy

--- a/community/reviews.html
+++ b/community/reviews.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
   <title>Boost Formal Review Process</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href=
   "../style-v2/section-community.css" />
@@ -39,25 +39,38 @@ http://www.boost.org/development/website_updating.html
 
             <div class="section-body">
               <ul class="toc">
-                <li><a href="#Introduction">Introduction</a></li>
+                <li>
+                  <a href="#Introduction">Introduction</a>
+                </li>
 
-                <li><a href="#Comments">What to include in Review
-                Comments</a></li>
+                <li>
+                  <a href="#Comments">What to include in Review Comments</a>
+                </li>
 
-                <li><a href="#Results">Results</a></li>
+                <li>
+                  <a href="#Results">Results</a>
+                </li>
 
-                <li><a href="#Review_Manager">Notes for Review
-                Managers</a></li>
+                <li>
+                  <a href="#Review_Manager">Notes for Review Managers</a>
+                </li>
 
-                <li><a href="#Submitters">Notes for Library
-                Submitters</a></li>
+                <li>
+                  <a href="#Submitters">Notes for Library Submitters</a>
+                </li>
 
-                <li><a href="#Maintainer">Library Maintainer's Rights and
-                Responsibilities</a></li>
+                <li>
+                  <a href="#Maintainer">Library Maintainer's Rights and
+                  Responsibilities</a>
+                </li>
 
-                <li><a href="#Wizard">Review Wizard</a></li>
+                <li>
+                  <a href="#Wizard">Review Wizard</a>
+                </li>
 
-                <li><a href="#Fast-Track">Fast Track Reviews</a></li>
+                <li>
+                  <a href="#Fast-Track">Fast Track Reviews</a>
+                </li>
               </ul>
 
               <h2><a name="Introduction" id=
@@ -171,10 +184,12 @@ http://www.boost.org/development/website_updating.html
                 "/development/requirements.html">Boost Library Requirements
                 and Guidelines</a>. If necessary, work with the submitter to
                 verify the code compiles and runs correctly on several
-                compilers and platforms.</li>
+                compilers and platforms.
+                </li>
 
                 <li>Finalizes the schedule with the <a href=
-                "#Wizard"></a>Review Wizard and the submitter.</li>
+                "#Wizard"></a>Review Wizard and the submitter.
+                </li>
 
                 <li>Posts a notice of the review schedule on both the regular
                 <strong><a href="mailto:boost@lists.boost.org" class=
@@ -200,7 +215,8 @@ http://www.boost.org/development/website_updating.html
                 These potential interactions should be pointed out in the
                 review announcement, and the author(s) of these libraries
                 should be privately notified and urged to participate in the
-                review.</li>
+                review.
+                </li>
 
                 <li>Urges people to do reviews if they aren't
                 forthcoming.</li>
@@ -210,8 +226,8 @@ http://www.boost.org/development/website_updating.html
 
                 <li>Asks the <a href="#Wizard">review wizard</a> for
                 permission to extend the review schedule if it appears that
-                too few reviews will be submitted during the review
-                period.</li>
+                too few reviews will be submitted during the review period.
+                </li>
 
                 <li>Decides if there is consensus to accept the library, and
                 if there are any conditions attached.</li>
@@ -223,7 +239,8 @@ http://www.boost.org/development/website_updating.html
                 "mailto:boost-users@lists.boost.org">boost-users</a></strong>
                 mailing list, and the <strong><a href=
                 "mailto:boost-announce@lists.boost.org">boost-announce</a></strong>
-                mailing list.</li>
+                mailing list.
+                </li>
               </ul>
 
               <p>In other words, it is the Review Manager's responsibility to
@@ -300,7 +317,8 @@ http://www.boost.org/development/website_updating.html
 
                 <li>Maintains a schedule of both past and pending reviews, in
                 the form of the <a href="review_schedule.html">Review
-                Schedule</a> web page.</li>
+                Schedule</a> web page.
+                </li>
 
                 <li>Resolves questions from review managers and library
                 submitters, who sometimes want a third opinion on questions
