--- a/development/submissions.html
+++ b/development/submissions.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
   <title>Boost Library Submission Process</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href=
   "/style-v2/section-development.css" />
@@ -38,23 +38,41 @@ http://www.boost.org/development/website_updating.html
               <h3>Steps for getting a library accepted by Boost:</h3>
 
               <ul class="toc">
-                <li><a href="#Learn">Learn about Boost</a></li>
+                <li>
+                  <a href="#Learn">Learn about Boost</a>
+                </li>
 
-                <li><a href="#interest">Determine interest</a></li>
+                <li>
+                  <a href="#interest">Determine interest</a>
+                </li>
 
-                <li><a href="#Preliminary">Preliminary submission</a></li>
+                <li>
+                  <a href="#Preliminary">Preliminary submission</a>
+                </li>
 
-                <li><a href="#Refinement">Refinement</a></li>
+                <li>
+                  <a href="#Refinement">Refinement</a>
+                </li>
 
-                <li><a href="#Submission">Submission for review</a></li>
+                <li>
+                  <a href="#Submission">Submission for review</a>
+                </li>
 
-                <li><a href="#Review">Formal Review</a></li>
+                <li>
+                  <a href="#Review">Formal Review</a>
+                </li>
 
-                <li><a href="#SitePosting">Web site posting</a></li>
+                <li>
+                  <a href="#SitePosting">Web site posting</a>
+                </li>
 
-                <li><a href="#People">People page</a></li>
+                <li>
+                  <a href="#People">People page</a>
+                </li>
 
-                <li><a href="#Lifecycle">Lifecycle</a></li>
+                <li>
+                  <a href="#Lifecycle">Lifecycle</a>
+                </li>
               </ul>
 
               <h2><a name="Learn" id="Learn"></a>Learn about Boost</h2>
@@ -99,9 +117,9 @@ http://www.boost.org/development/website_updating.html
               <h2><a name="Preliminary" id="Preliminary"></a>Preliminary
               submission</h2>
 
-              <p>If response to an initial query indicates interest,
-              then make your preliminary submission publicly available
-              if you haven't already done so.</p>
+              <p>If response to an initial query indicates interest, then
+              make your preliminary submission publicly available if you
+              haven't already done so.</p>
 
               <h2><a name="Refinement" id="Refinement"></a>Refinement</h2>
 
@@ -135,23 +153,22 @@ http://www.boost.org/development/website_updating.html
               final <a href="requirements.html#Directory_structure">directory
               structure</a> and format of the web site, the better.</p>
 
-              <p>Like a preliminary submission, make final submission
-              .zip publicly available.</p>
+              <p>Like a preliminary submission, make final submission .zip
+              publicly available.</p>
 
               <h2><a name="Review" id="Review"></a>Formal Review</h2>
 
               <p>Before asking for formal review, your submission should be
-              easilly accessible to all. Please verify that your
-              submission compiles and runs under at least two compilers. This
-              flushes out obvious portability problems. If you don't have
-              access to a second compiler, ask for help on the Boost mailing
-              list.</p>
+              easilly accessible to all. Please verify that your submission
+              compiles and runs under at least two compilers. This flushes
+              out obvious portability problems. If you don't have access to a
+              second compiler, ask for help on the Boost mailing list.</p>
 
-              <p>Once a library author feels a submission has matured enough for formal
-              review, the author sends a message requesting a formal review
-              to the mailing list. Please use a subject in the form "Review
-              Request: library" where <i>library</i> is replaced by the
-              library name.</p>
+              <p>Once a library author feels a submission has matured enough
+              for formal review, the author sends a message requesting a
+              formal review to the mailing list. Please use a subject in the
+              form "Review Request: library" where <i>library</i> is replaced
+              by the library name.</p>
 
               <p>See <a href="/community/reviews.html">Formal Review
               Process</a> for details.</p>
