suggested updates for pages to reflect the current formal review process

--- a/development/submissions.html
+++ b/development/submissions.html
@@ -96,9 +96,15 @@ http://www.boost.org/development/website_updating.html
               <h2><a name="interest" id="interest"></a>Determine
               interest</h2>
 
+              <p>While participation in prior reviews is not a prerequisite
+              for submitting a library to Boost, it is highly recommended
+              because it will acquaint you with the process and the emotional
+              demands of a formal review.</p>
+
               <p>Potential library submitters should use the Boost developers
-              <a href="/community/groups.html">mailing list</a> as a forum to
-              gauge interest a possible submission.</p>
+              <a href="/community/groups.html">mailing list</a> and <a href=
+              "http://blincubator.com">Boost Library Incubator</a> as forums
+              to gauge interest in a possible submission.</p>
 
               <p>A message might be as simple as "Is there any interest in a
               library which solves Travelling Salesperson problems in linear
@@ -121,6 +127,30 @@ http://www.boost.org/development/website_updating.html
               make your preliminary submission publicly available if you
               haven't already done so.</p>
 
+              <p>Please post your code to a version control system such as
+              Github, and make your documentation available in HTML format on
+              a public website. An issue tracker is also highly
+              recommended.</p>
+
+              <p>The submission should contain material as if on the
+              boost.org web site. The closer the submission file mirrors the
+              final directory structure and format of the web site, the
+              better. This makes it possible for reviewers to simply copy
+              your code into the Boost distribution for testing.</p>
+
+              <p>Please verify that your submission compiles and runs under
+              at least two compilers. This flushes out obvious portability
+              problems.</p>
+
+              <p>It is recommended that you release your code under the Boost
+              Software License; see the <a href=
+              "requirements.html">Requirements</a> page for more
+              information.</p>
+
+              <p>You can receive preliminary feedback and reviews by
+              submitting your library to the <a href=
+              "http://blincubator.com">Boost Library Incubator</a>.</p>
+
               <h2><a name="Refinement" id="Refinement"></a>Refinement</h2>
 
               <p>Discuss, refine, resubmit. Repeat until satisfied.</p>
@@ -136,39 +166,45 @@ http://www.boost.org/development/website_updating.html
               past messages is one way to see how this process worked for
               other Boost libraries.</p>
 
-              <h2><a name="Submission" id="Submission"></a>Submission for
-              review</h2>
+              <h2><a name="Seeking" id="Seeking"></a>Seek a Review
+              Manager</h2>
 
-              <p>All of the files which make up the library should be
-              combined and compressed into a single submission file using the
-              .zip format. Free encoders and decoders for this format running
-              on many different platforms are available at the <a href=
-              "http://www.info-zip.org/pub/infozip/">Info-ZIP</a> web site,
-              which includes a FAQ and much other useful information about
-              the .zip format. Many commercial compressor-archiver utilities
-              also support this format.</p>
+              <p>In order to have a formal review, the author must find a
+              capable volunteer to manage the review. This should be someone
+              with knowledge of the library domain, and experience with the
+              review process. See <a href="/community/reviews.html">Formal
+              Review Process</a> for the responsibilities of the review
+              manager.</p>
 
-              <p>The submission file should contain material as if on the
-              boost.org web site. The closer the submission file mirrors the
-              final <a href="requirements.html#Directory_structure">directory
-              structure</a> and format of the web site, the better.</p>
+              <p>Authors can find community members interested in managing
+              reviews on the <a href=
+              "https://svn.boost.org/trac/boost/wiki/ReviewManagerVolunteers">
+              Review Manager Volunteers</a> wiki page, or through discussion
+              of the library on the developer list or the Incubator.</p>
 
-              <p>Like a preliminary submission, make final submission .zip
-              publicly available.</p>
+              <p>Once a potential review manager has been found, contact the
+              review wizards for approval. The wizards approve review
+              managers based on their level of participation in the Boost
+              community.</p>
 
               <h2><a name="Review" id="Review"></a>Formal Review</h2>
 
               <p>Before asking for formal review, your submission should be
-              easilly accessible to all. Please verify that your submission
+              easily accessible to all. Please verify that your submission
               compiles and runs under at least two compilers. This flushes
               out obvious portability problems. If you don't have access to a
               second compiler, ask for help on the Boost mailing list.</p>
 
               <p>Once a library author feels a submission has matured enough
-              for formal review, the author sends a message requesting a
-              formal review to the mailing list. Please use a subject in the
-              form "Review Request: library" where <i>library</i> is replaced
-              by the library name.</p>
+              for the formal review, and has found someone to manage the
+              review, the author sends a message requesting a formal review
+              to the mailing list and the review wizards. Please use a
+              subject in the form "Review Request: library" where
+              <i>library</i> is replaced by the library name.</p>
+
+              <p>The review wizards will coordinate with the author and
+              review manager to schedule a date convenient for the author and
+              review manager.</p>
 
               <p>See <a href="/community/reviews.html">Formal Review
               Process</a> for details.</p>
@@ -206,6 +242,10 @@ http://www.boost.org/development/website_updating.html
               longer can or wish to maintain your library, please post a
               message on the Boost developers mailing list and help someone
               else take over as the library maintainer.</p>
+
+              <p>Orphaned libraries will be put in the care of the <a href=
+              "https://svn.boost.org/trac/boost/wiki/CommunityMaintenance">Community
+              Maintenance Team</a>.</p>
             </div>
           </div>
         </div>
