--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -29,9 +29,9 @@ http://www.boost.org/development/website_updating.html
             </div>
 
             <div class="section-body">
-              <p>Reviews are usually scheduled on a first-come-first-served
-              basis, and normally last ten days. See <a href=
-              "reviews.html">Formal Review Process</a> for more
+              <p>Reviews are scheduled when the review wizards approve a
+              review manager and agree with the manager and author on dates.
+              See <a href="reviews.html">Formal Review Process</a> for more
               information.</p>
 
               <p>In addition to upcoming reviews, the schedule includes
@@ -3316,12 +3316,15 @@ http://www.boost.org/development/website_updating.html
 
               <h2><a name="Managers" id="Managers"></a>Review Managers</h2>
 
-              <p>We try to rotate the task of Review Manager between many
-              experienced Boost members, both to ensure fairness, and to
-              spread the workload. If you would like to volunteer to become a
-              review manager, please contact Ronald Garcia (rxg at cs dot ubc
-              dot ca) and John Phillips (johnphillipsithaca at gmail dot
-              com).</p>
+              <p>In order for a review to proceed, a Boost member must
+              volunteer to manage the review. This should be someone with
+              experience with the review process and knowledge of the
+              library's domain. If you would like to volunteer to become a
+              review manager, please sign up on the <a href=
+              "https://svn.boost.org/trac/boost/wiki/ReviewManagerVolunteers">
+              Review Manager Volunteers</a> page, or contact Ronald Garcia
+              (rxg at cs dot ubc dot ca) and John Phillips
+              (johnphillipsithaca at gmail dot com).</p>
             </div>
           </div>
         </div>
