--- a/community/reviews.html
+++ b/community/reviews.html
@@ -33,8 +33,8 @@ http://www.boost.org/development/website_updating.html
 
               <p><strong>Read and follow the Boost <a href=
               "/development/submissions.html">submission
-              process</a>.</strong> There are at least four steps a library
-              author must take before a formal review is requested.</p>
+              process</a>.</strong> There are several steps a library author
+              must take before a formal review is requested.</p>
             </div>
 
             <div class="section-body">
@@ -88,7 +88,9 @@ http://www.boost.org/development/website_updating.html
               Review comments:</p>
 
               <ul>
-                <li>Publicly on the mailing list.</li>
+                <li>Publicly on the mailing list or the <a href=
+                "http://blincubator.com">Boost Library Incubator</a>.
+                </li>
 
                 <li>Privately to the Review Manager.</li>
               </ul>
@@ -162,19 +164,26 @@ http://www.boost.org/development/website_updating.html
 
               <h2><a name="Results" id="Results"></a>Results</h2>
 
-              <p>At the conclusion of the comment period, the Review Manager
-              will post a message to the mailing list saying if the library
-              has been accepted or rejected. A rationale is also helpful, but
-              its extent is up to the Review Manager. If there are
-              suggestions, or conditions that must be met before final
-              inclusion, they should be stated.</p>
+              <p>Within a reasonable time after the conclusion of the comment
+              period, the Review Manager will post a message to the mailing
+              list saying if the library has been accepted or rejected. A
+              rationale is also helpful, but its extent is up to the Review
+              Manager. If there are suggestions, or conditions that must be
+              met before final inclusion, they should be stated. Concerns
+              about the timeliness or quality of the review report should be
+              brought to the Review Wizards off-list.</p>
 
               <h2><a name="Review_Manager" id="Review_Manager"></a>Notes for
               Review Managers</h2>
 
               <p>Before a library can be scheduled for formal review, an
               active boost member not connected with the library submission
-              must volunteer to be the "Review Manager" for the library.</p>
+              must volunteer to be the "Review Manager" for the library.
+              Members may register their interest in reviewing libraries at
+              the <a href=
+              "https://svn.boost.org/trac/boost/wiki/ReviewManagerVolunteers">
+              Review Manager Volunteers</a> page, or by contacting a library
+              author on- or off-list.</p>
 
               <p>The Review Manager:</p>
 
@@ -182,9 +191,11 @@ http://www.boost.org/development/website_updating.html
                 <li>Checks the submission to make sure it really is complete
                 enough to warrant formal review. See the <a href=
                 "/development/requirements.html">Boost Library Requirements
-                and Guidelines</a>. If necessary, work with the submitter to
-                verify the code compiles and runs correctly on several
-                compilers and platforms.
+                and Guidelines</a>. Submitting through the <a href=
+                "http://blincubator.com">Boost Library Incubator</a> will
+                verify many of the requirements. If necessary, work with the
+                submitter to verify the code compiles and runs correctly on
+                several compilers and platforms.
                 </li>
 
                 <li>Finalizes the schedule with the <a href=
@@ -230,7 +241,9 @@ http://www.boost.org/development/website_updating.html
                 </li>
 
                 <li>Decides if there is consensus to accept the library, and
-                if there are any conditions attached.</li>
+                if there are any conditions attached. Consensus is not the
+                same as a vote. The Review Manager has discretion to weigh
+                opinions based on authority or thoughtfulness.</li>
 
                 <li>Posts a notice of the <a href="#Results">review
                 results</a> on the regular <strong><a href=
@@ -289,23 +302,27 @@ http://www.boost.org/development/website_updating.html
               to the boost community and to find another individual to take
               your place.</p>
 
-              <h2><a name="Wizard" id="Wizard"></a>Review Wizard</h2>
+              <p>Libraries which have been abandoned will be put in care of
+              the <a href=
+              "https://svn.boost.org/trac/boost/wiki/CommunityMaintenance">Community
+              Maintenance Team</a>.</p>
 
-              <p>The Review Wizard coordinates the formal review
+              <h2><a name="Wizard" id="Wizard"></a>Review Wizards</h2>
+
+              <p>The Review Wizards coordinate the formal review
               schedule:</p>
 
               <ul>
-                <li>Maintains a list of review manager volunteers, in the
-                form of a queue, so that volunteers who least recently
-                managed reviews become the prime candidates for upcoming
-                reviews.</li>
-
                 <li>When a formal review is requested for a library:
 
                   <ul>
-                    <li>Assign a review manager and suggests a schedule,
-                    after checking (via private email) availability of the
-                    volunteers at the top of review manager queue.</li>
+                    <li>Approve the review manager based on their
+                    participation in the Boost community, including the
+                    mailing list, previous reviews, and other forums.</li>
+
+                    <li>Suggest a schedule, after checking (via private
+                    email) availability of the review manager and library
+                    author.</li>
 
                     <li>Finalize the schedule, once the review manager
                     verifies the library is actually ready for review.</li>
@@ -371,6 +388,14 @@ http://www.boost.org/development/website_updating.html
                 <li>After applying the proposed changes, the component is
                 checked into the repository like any other library.</li>
               </ul>
+
+              <h2><a name="Mini-Reviews" id=
+              "Mini-Reviews"></a>Mini-Reviews</h2>
+
+              <p>If a review results in conditions on acceptance, the review
+              manager may request a Mini-Review to determine if the
+              conditions have been met. The Mini-Review is usually conducted
+              by the same review manager.</p>
             </div>
           </div>
         </div>
