remove referenes to incubator and review manager volunteer pages

--- a/community/reviews.html
+++ b/community/reviews.html
@@ -88,9 +88,7 @@ http://www.boost.org/development/website_updating.html
               Review comments:</p>
 
               <ul>
-                <li>Publicly on the mailing list or the <a href=
-                "http://blincubator.com">Boost Library Incubator</a>.
-                </li>
+                <li>Publicly on the mailing list</li>
 
                 <li>Privately to the Review Manager.</li>
               </ul>
@@ -179,11 +177,8 @@ http://www.boost.org/development/website_updating.html
               <p>Before a library can be scheduled for formal review, an
               active boost member not connected with the library submission
               must volunteer to be the "Review Manager" for the library.
-              Members may register their interest in reviewing libraries at
-              the <a href=
-              "https://svn.boost.org/trac/boost/wiki/ReviewManagerVolunteers">
-              Review Manager Volunteers</a> page, or by contacting a library
-              author on- or off-list.</p>
+              Members may contact a library author on- or off-list to express
+              interest in managing the review.</p>
 
               <p>The Review Manager:</p>
 
@@ -191,11 +186,9 @@ http://www.boost.org/development/website_updating.html
                 <li>Checks the submission to make sure it really is complete
                 enough to warrant formal review. See the <a href=
                 "/development/requirements.html">Boost Library Requirements
-                and Guidelines</a>. Submitting through the <a href=
-                "http://blincubator.com">Boost Library Incubator</a> will
-                verify many of the requirements. If necessary, work with the
-                submitter to verify the code compiles and runs correctly on
-                several compilers and platforms.
+                and Guidelines</a>. If necessary, work with the submitter to
+                verify the code compiles and runs correctly on several
+                compilers and platforms.
                 </li>
 
                 <li>Finalizes the schedule with the <a href=
