--- a/development/submissions.html
+++ b/development/submissions.html
@@ -102,9 +102,8 @@ http://www.boost.org/development/website_updating.html
               demands of a formal review.</p>
 
               <p>Potential library submitters should use the Boost developers
-              <a href="/community/groups.html">mailing list</a> and <a href=
-              "http://blincubator.com">Boost Library Incubator</a> as forums
-              to gauge interest in a possible submission.</p>
+              <a href="/community/groups.html">mailing list</a> to gauge
+              interest in a possible submission.</p>
 
               <p>A message might be as simple as "Is there any interest in a
               library which solves Travelling Salesperson problems in linear
@@ -147,10 +146,6 @@ http://www.boost.org/development/website_updating.html
               "requirements.html">Requirements</a> page for more
               information.</p>
 
-              <p>You can receive preliminary feedback and reviews by
-              submitting your library to the <a href=
-              "http://blincubator.com">Boost Library Incubator</a>.</p>
-
               <h2><a name="Refinement" id="Refinement"></a>Refinement</h2>
 
               <p>Discuss, refine, resubmit. Repeat until satisfied.</p>
@@ -177,10 +172,8 @@ http://www.boost.org/development/website_updating.html
               manager.</p>
 
               <p>Authors can find community members interested in managing
-              reviews on the <a href=
-              "https://svn.boost.org/trac/boost/wiki/ReviewManagerVolunteers">
-              Review Manager Volunteers</a> wiki page, or through discussion
-              of the library on the developer list or the Incubator.</p>
+              reviews through discussion of the library on the developer
+              list.</p>
 
               <p>Once a potential review manager has been found, contact the
               review wizards for approval. The wizards approve review
