advice about asking someone to manage a review

--- a/development/submissions.html
+++ b/development/submissions.html
@@ -173,7 +173,11 @@ http://www.boost.org/development/website_updating.html
 
               <p>Authors can find community members interested in managing
               reviews through discussion of the library on the developer
-              list.</p>
+              list. If no one steps forward to volunteer to manage the
+              review, it is appropriate to contact an experienced Boost
+              member who showed interest in the library. Be considerate that
+              managing a review is a serious commitment; for this reason,
+              it's better to contact the member off-list.</p>
 
               <p>Once a potential review manager has been found, contact the
               review wizards for approval. The wizards approve review
