Create section for modularization info.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -52,6 +52,30 @@
 
 
 
+  <div id="version_1_56_0.modularization">
+    <h3><span class="link">Modularization</span></h3>
+    <p>
+      Boost version control has migrated to a system using git submodules.
+    </p>
+    <p>
+      New modules are:
+    </p>
+    <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/core/">Core</a>:</span>
+  Core utilities used by other
+          libraries, with minimal dependencies. Maintained by Peter Dimov, Glen Fernandes
+          and Andrey Semashev.
+        </div>
+      </li>
+      <li>
+        <div>
+          <em>TODO</em>
+        </div>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_56_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
     <ul>
@@ -60,14 +84,6 @@
           <span class="library"><a href="/doc/libs/master/libs/align/">Align</a>:</span>
   Memory alignment functions,
           allocators, and adaptors, from Glen Fernandes.
-        </div>
-      </li>
-      <li>
-        <div>
-          <span class="library"><a href="/doc/libs/master/libs/core/">Core</a>:</span>
-  Core utilities used by other
-          libraries, with minimal dependencies. Maintained by Peter Dimov, Glen Fernandes
-          and Andrey Semashev.
         </div>
       </li>
       <li>
