Add type_index to release notes.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -88,7 +88,9 @@
       </li>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/doc/libs/master/libs/type_index/">Type_Index</a>:</span>
+  Runtime/Compile
+          time copyable type info, from Antony Polukhin.
         </div>
       </li>
     </ul>
