List all new modules.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -55,12 +55,22 @@
   <div id="version_1_56_0.modularization">
     <h3><span class="link">Modularization</span></h3>
     <p>
-      Boost version control has migrated to a system using git submodules.
+      Boost version control has migrated to a system using git submodules. This shouldn't
+      make too much of a difference to users, although the directory structure is
+      now a bit different.
     </p>
     <p>
-      New modules are:
+      Parts of some libraries have been moved into different modules, and several
+      new modules have been extracted from existing code. These are:
     </p>
     <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/assert/">Assert</a>:</span>
+  Customizable assert macros.
+          Maintained by Peter Dimov.
+        </div>
+      </li>
       <li>
         <div>
           <span class="library"><a href="/doc/libs/master/libs/core/">Core</a>:</span>
@@ -71,10 +81,31 @@
       </li>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/doc/libs/master/libs/lexical_cast/">Lexical_Cast</a>:</span>
+  General literal
+          text conversions, such as an int represented a string, or vice-versa, from
+          Kevlin Henney.
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/throw_exception/">Throw_Exception</a>:</span>
+  A common
+          infrastructure for throwing exceptions from Boost libraries, from Emil
+          Dotchevski.
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library">Winapi:</span>
+  Windows API declarations without &lt;windows.h&gt;, for internal
+          Boost use.
         </div>
       </li>
     </ul>
+    <p>
+      All header paths should remain the same.
+    </p>
   </div>
   <div id="version_1_56_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
