Shuffle some text around.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -61,7 +61,8 @@
     </p>
     <p>
       Parts of some libraries have been moved into different modules, and several
-      new modules have been extracted from existing code. These are:
+      new modules have been extracted from existing code. All header paths should
+      remain the same. The new modules are:
     </p>
     <ul>
       <li>
@@ -103,9 +104,6 @@
         </div>
       </li>
     </ul>
-    <p>
-      All header paths should remain the same.
-    </p>
   </div>
   <div id="version_1_56_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
