--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -1399,11 +1399,6 @@
           </ul>
         </div>
       </li>
-      <li>
-        <div>
-          <em>TODO</em>
-        </div>
-      </li>
     </ul>
   </div>
   <div id="version_1_56_0.compilers_tested">
@@ -1414,7 +1409,122 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.4, 3.3, 3.2, 3.1, 3.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++98: 3.3.16
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11, libc++: 3.4.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++1y: 3.3.16
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.8.2, 4.8.1, 4.7.3, 4.6.4, 4.4.7
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++98: 4.9.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.8.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++1y: 4.9.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 13.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Apple Clang: 5.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++11: 5.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.2.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 12.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, mingw: 4.9.0, 4.8.2, 4.7.3, 4.7.2, 4.6.3, 4.5.4, 4.4.7
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 12.0, 11.0, 10.0, 9.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.2.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC: 4.4.2
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -1424,7 +1534,142 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.4, 3.3, 3.2, 3.1, 3.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++98: 3.3.16
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11, libc++: 3.4.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++1y: 3.3.16
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14, libc++: trunk
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.8.2, 4.8.1, 4.7.3, 4.6.4, 4.4.7
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++98: 4.9.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.9.0, 4.8.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++1y: 4.9.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 13.1, 13.0, 12.1, 11.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Apple Clang: 5.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++11:
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang: trunk
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11: trunk
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.2.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 12.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, mingw: 4.9.0, 4.8.2, 4.7.2, 4.6.3, 4.5.4, 4.4.7
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 12.0, 11.0, 10.0, 9.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.2.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC, ARM: 4.4.2
+              </div>
+            </li>
+            <li>
+              <div>
+                QCC, x86: 4.4.2
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -1432,7 +1677,9 @@
   <div id="version_1_56_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Eric Niebler,
+      <a href="/users/people/rene_rivera.html">Rene Rivera</a>, Daniel James,
+      Vladimir Prus and Marshall Clow managed this release.
     </p>
   </div>
 </div>
