Fix multiarray listing.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -720,17 +720,44 @@
           </ul>
         </div>
       </li>
-    </ul>
-    <p>
-      <span class="library"><a href="/doc/libs/master/libs/multi_array/index.html">MultiArray</a>:</span>
-  * <a href="https://svn.boost.org/trac/boost/ticket/5664">#5664</a> operator()
-      checks for Collection concept but requires RandomAccessCollection * <a href="https://svn.boost.org/trac/boost/ticket/4874">#4874</a> compile
-      errors using Visual C++ 2010 in debug mode * <a href="https://svn.boost.org/trac/boost/ticket/3581">#3581</a> MultiArray storage order
-      example incorrect for fortran_storage_ordering * <a href="https://svn.boost.org/trac/boost/ticket/4032">#4032</a> Move MultiArray concepts
-      out of detail namespace * <a href="https://svn.boost.org/trac/boost/ticket/9212">#9212</a> Broken links to C++ standard papers * <a href="https://svn.boost.org/trac/boost/ticket/8368">#8368</a> GCC
-      -Wundef warning about BOOST_MULTI_ARRAY_NO_GENERATORS in multi_array
-    </p>
-    <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/multi_array/index.html">MultiArray</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/5664">#5664</a> operator() checks for Collection concept but requires RandomAccessCollection
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/4874">#4874</a> compile errors using Visual C++ 2010 in debug mode
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/3581">#3581</a> MultiArray storage order example incorrect for fortran_storage_ordering
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/4032">#4032</a> Move MultiArray concepts out of detail namespace
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/9212">#9212</a> Broken links to C++ standard papers
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/8368">#8368</a> GCC -Wundef warning about BOOST_MULTI_ARRAY_NO_GENERATORS
+                in multi_array
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
       <li>
         <div>
           <span class="library"><a href="/doc/libs/master/libs/multi_index/index.html">Multi-index Containers</a>:</span>
