Use italics rather than bold.
Reserve bold for things that need to stand out.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -1096,7 +1096,7 @@
           <ul>
             <li>
               <div>
-                <strong>New Experimental Features:</strong>
+                <em>New Experimental Features:</em>
                 <ul>
                   <li>
                     <div>
@@ -1158,7 +1158,7 @@
             </li>
             <li>
               <div>
-                <strong>Fixed Bugs:</strong>
+                <em>Fixed Bugs:</em>
                 <ul>
                   <li>
                     <div>
